<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:text="@string/welcome"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_margin="20dp"
                    android:text="@string/welcome_msg"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/app_version"/>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="1"
                    android:padding="20dp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_height="wrap_content"
                        android:layout_columnWeight="2"
                        android:layout_columnSpan="2"
                        android:hint="@string/enter_name"
                        android:layout_marginRight="10dp"
                        />

                    <Button
                        android:id="@+id/save"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="1"
                        android:text="@string/save_name"/>
                </GridLayout>
            </LinearLayout>

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/my_navigation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:menu="@menu/navigationbar">
            </com.google.android.material.navigation.NavigationView>
        </androidx.drawerlayout.widget.DrawerLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>