<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="20dp">

                    <TextView
                        android:id="@+id/dateDisplay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="" />

                    <Button
                        android:id="@+id/btnChangeDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_date" />
                </LinearLayout>

                <TextView
                    android:id="@+id/urlDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text=""/>

                <ImageView
                    android:id="@+id/nasaImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/avatars"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/hdurlDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hdurl"
                    android:clickable="true"
                    android:focusable="true"
                    android:autoLink="web"
                    android:gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center">

                    <Button
                        android:id="@+id/load"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_columnSpan="1"
                        android:text="@string/load"
                        android:layout_marginRight="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <Button
                        android:id="@+id/favorite"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_columnSpan="1"
                        android:text="@string/favorite"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.navigation.NavigationView
                android:id="@+id/my_navigation"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                app:menu="@menu/navigationbar">
            </com.google.android.material.navigation.NavigationView>
        </androidx.drawerlayout.widget.DrawerLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>